# aorus-ai-assistant

./: .env.example  .gitignore  README.md  config.py  default.sqlite  main.py  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
data/: specs.json  synonyms.json  warning_context.txt
data/rag/: disclaimers.txt  synonyms.json
data/test/: aorus_test_cases.csv  aorus_test_results.jsonl  aorus_test_results_20260307_230413.csv  aorus_test_results_20260307_230413.jsonl  aorus_test_results_20260307_230413_eval.csv  aorus_test_results_20260307_230413_eval_feedback.csv  aorus_test_results_20260307_230413_eval_score.csv  aorus_test_results_20260308_232226.csv  aorus_test_results_20260308_232226.jsonl  aorus_test_results_20260308_232354.csv  aorus_test_results_20260308_232354.jsonl  aorus_test_results_20260308_232817.csv  aorus_test_results_20260308_232817.jsonl  aorus_test_results_eval.csv  test_cases.csv  test_log_20260309_011220.txt  test_log_20260309_011846.txt  test_results.csv  test_results_20260309_011220.csv  test_results_20260309_011220.jsonl  test_results_20260309_011220_eval_nonllm.csv  test_results_20260309_011846.csv  test_results_20260309_011846.jsonl  test_results_20260309_011846_eval_nonllm.csv
scripts/: data_parser.py  gen_test_data.py  setup_models.py  specs_parser.py
src/: data_parser.py  eval_prompts.py  evaluate.py  main.py  retriever.py  rrr.py  utils.py  vram_monitor.py
