[project]
name = "aorus-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markupsafe==2.1.5",
    "jinja2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "llama-cpp-python>=0.3.16",
    "bs4>=0.0.2",
    "requests>=2.32.5",
    "playwright>=1.58.0",
    "faiss-cpu>=1.13.2",
    "sentence-transformers>=5.2.3",
    "opencc>=1.2.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "python-dotenv>=1.2.2",
    "google-genai>=1.66.0",
    "openpyxl>=3.1.5",
    "deepeval>=3.8.9",
    "pandas>=2.3.3",
    "numpy<2.0.0",
    "tqdm>=4.67.3",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.8.0",
    "spacy>=3.7.0,<3.8.0",
    "zh-core-web-trf",
    "pynvml>=13.0.1",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
zh-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/zh_core_web_trf-3.7.2/zh_core_web_trf-3.7.2-py3-none-any.whl" }
